// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render MovieCardDescription component 1`] = `
<div
  className="movie-card__desc"
>
  <h2
    className="movie-card__title"
  >
    Fantastic Beasts
  </h2>
  <p
    className="movie-card__meta"
  >
    <span
      className="movie-card__genre"
    >
      Drama
    </span>
    <span
      className="movie-card__year"
    >
      2011
    </span>
  </p>
  <div
    className="movie-card__buttons"
  >
    <a
      className="btn btn--play movie-card__button"
      href="/player/1"
      onClick={[Function]}
      type="button"
    >
      <svg
        height="19"
        viewBox="0 0 19 19"
        width="19"
      >
        <use
          xlinkHref="#play-s"
        />
      </svg>
      <span>
        Play
      </span>
    </a>
    <button
      className="btn btn--list movie-card__button"
      onClick={[Function]}
      type="button"
    >
      <svg
        height="20"
        viewBox="0 0 19 20"
        width="19"
      >
        <use
          xlinkHref="#add"
        />
      </svg>
      <span>
        My list
      </span>
    </button>
  </div>
</div>
`;

exports[`render MovieCardDescription component with children 1`] = `
<div
  className="movie-card__desc"
>
  <h2
    className="movie-card__title"
  >
    Fantastic Beasts
  </h2>
  <p
    className="movie-card__meta"
  >
    <span
      className="movie-card__genre"
    >
      Drama
    </span>
    <span
      className="movie-card__year"
    >
      2011
    </span>
  </p>
  <div
    className="movie-card__buttons"
  >
    <a
      className="btn btn--play movie-card__button"
      href="/player/1"
      onClick={[Function]}
      type="button"
    >
      <svg
        height="19"
        viewBox="0 0 19 19"
        width="19"
      >
        <use
          xlinkHref="#play-s"
        />
      </svg>
      <span>
        Play
      </span>
    </a>
    <button
      className="btn btn--list movie-card__button"
      onClick={[Function]}
      type="button"
    >
      <svg
        height="20"
        viewBox="0 0 19 20"
        width="19"
      >
        <use
          xlinkHref="#add"
        />
      </svg>
      <span>
        My list
      </span>
    </button>
    <h1>
      Text
    </h1>
  </div>
</div>
`;
